--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "mongoose": "^5.7.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.3",
+    "@angular/compiler-cli": "~8.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
@@ -51,5 +54,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "engines": {
+    "node":"10.15.3",
+    "npm":"6.4.1"
   }
 }
